<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
    android:id="@+id/itemEntryET"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_marginTop="10dp"
    android:hint="Workout Item"
    android:inputType="text" />

    <EditText
        android:id="@+id/setEntryET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="Number of Sets"
        android:inputType="number" />

    <EditText
        android:id="@+id/repEntryET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:hint="Number of Reps"
        android:inputType="number"/>


</RelativeLayout>